<resources>
    <string name="app_name">Billiterate - Berkeley</string>
    <string name="title_section3">Representatives</string>
    <string name="title_section2">Trending</string>
    <string name="title_section1">Agenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="alt_text">This is different text</string>
    <string name="title_activity_bill_info">BillInfoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="get_information">Get More Information</string>
    <string name="contact_rep">Contact Representative</string>
    <string name="add_comment">Add a comment</string>
    <string name="post">Post</string>
    <string name="findLocation">Find Meeting Location</string>
    <string name="april_two">April 2 - City Council\n7:00PM - 2134 Martin Luther King Jr. Way</string>
    <string name="april_two_spec">April 2 - Special\n5:30PM - 2134 Martin Luther King Jr. Way</string>
    <string name="march_nineteen">March 19 - City Council\n7:00PM - 2134 Martin Luther King Jr. Way</string>
    <string name="march_five">March 5 - City Council\n7:00PM - 2134 Martin Luther King Jr. Way</string>
    <string name="feb_nineteen">February 19 - City Council\n7:00PM - 2134 Martin Luther King Jr. Way</string>
    <string name="feb_five">February 5 - City Council\n7:00PM - 2134 Martin Luther King Jr. Way</string>
    <string name="jan_twentynine">January 29 - City Council\n7:00PM - 2134 Martin Luther King Jr. Way</string>
    <string name="jan_twentytwo">January 22 - City Council\n7:00PM - 2134 Martin Luther King Jr. Way</string>
	<string name="late_t">Zoning Amendments to Allow Later Hours of Operation on Telegraph Avenue; BMC Section 23E.56.060</string>
	<string name="late_s">Berkeley Municipal Code Section 23E.56.060 of the Zoning Ordinance to extend the allowable hours of operation for businesses in the Commercial Telegraph (C-T) District to include 24/7 hours north of Dwight Way and a required closing time of 12:00 a.m. south of Dwight Way.</string>
	<string name="massage_t">Amending BMC Chapter 9.32 Massage Ordinance: Exempting Chair Massage</string>
	<string name="massage_s">Adopt first reading of an Ordinance amending Sections 9.32.020 and 9.32.060 of the Berkeley Municipal Code to exempt chair massage from the requirement for a massage establishment permit.</string>
	<string name="bid_t">Formal Bid Solicitation and Request for Proposal Scheduled for Possible Issuance After Council Approval on April 2, 2013</string>
	<string name="bid_s">Approve the request for proposals or invitation for bids (attached to staff report) that will be, or are planned to be, issued upon final approval by the requesting department or division. All contracts over the City Manager\'s threshold will be returned to Council for final approval.</string>
	<string name="milliman_t">Contract No. 7722D Amendment: Milliman, Inc. for Actuarial Services</string>
	<string name="milliman_s">Adopt a Resolution authorizing the City Manager to amend the existing Contract No. 7722D with Milliman, Inc., (hereinafter \"Milliman\") by increasing expenditure authority in an amount not to exceed $120,000, for a total contract amount of $369,999 through June 30, 2015 for actuarial services pertaining to retiree medical benefit plans.</string>
	<string name="solicit_t">Formal Bid Solicitation and Request for Proposal Scheduled for Possible Issuance After Council Approval on March 19, 2013</string>
	<string name="solicit_s">Approve the request for proposals or invitation for bids (attached to staff report) that will be, or are planned to be, issued upon final approval by the requesting department or division.  All contracts over the City Manager\'s threshold will be returned to Council for final approval.</string>
	<string name="shelter_t">Revenue Contract: County of Alameda for Shelter Plus Care Program</string>
	<string name="shelter_s">Adopt a Resolution authorizing the City Manager to execute any resultant agreements or amendments with the County of Alameda for Shelter Plus Care in an amount not to exceed $241,057 to provide tenant-based rental assistance for people living with HIV/AIDS for the 12-month period of March 1, 2013 through February 28, 2014.</string>
	<string name="ahra_t">Classification: Assistant Human Resources Analyst</string>
	<string name="ahra_s">Adopt a Resolution amending Resolution No. 65,376-N.S., Classification and Salary Resolution for Unrepresented Employees, to establish the classification of Assistant Human Resources Analyst with a monthly salary range of $5,590 to $6,800 effective March 20, 2013.</string>
	<string name="womens_t">Lease: Women\'s Daytime Drop-In Center at 2218 Acton Street</string>
	<string name="womens_s">Adopt second reading of Ordinance No. 7,280–N.S. authorizing the City Manager to execute a five-year lease agreement of 2218 Acton Street to the Women\'s Daytime Drop-In Center (WDDC) for use as a drop-in center and social service site for homeless women and families.</string>
	<string name="csi_t">Lease Amendment: International Computer Science Institute at 1947 Center Street</string>
	<string name="csi_s">Adopt second reading of Ordinance No. 7,281–N.S. authorizing the City Manager to execute an amendment to the City’s lease (Contract No. R7593) with International Computer Science Institute to provide for an adjustment in rent for the first five-year option period.</string>
	<string name="rules_t">City Council Rules of Procedure and Order</string>
	<string name="rules_s">Adopt a Resolution revising the City Council Rules of Procedure and Order to clarify the procedures for public comment relating to appeals on Council agendas and rescinding Resolution No. 65,910-N.S.</string>
	<string name="insure_t">Formal Bid Solicitation and Request for Proposal Scheduled For Possible Issuance After Council Approval on March 5, 2013</string>
	<string name="insure_s">Approve the request for proposals or invitation for bids (attached to staff report) that will be, or are planned to be, issued upon final approval by the requesting department or division.  All contracts over the City Manager\'s threshold will be returned to Council for final approval.</string>
	<string name="taxi_t">Cleanup Amendment to Taxi Ordinance (BMC Chapter 9.52)</string>
	<string name="taxi_s">Adopt second reading of Ordinance No. 7,277–N.S. amending Berkeley Municipal Code Section 9.52.050.B.1.f to correct an inadvertent omission.</string>
	<string name="renew_t">Enact Chapter 13.79, Automatically Renewing Leases</string>
	<string name="renew_s">Adopt second reading of Ordinance No. 7,278–N.S. enacting Berkeley Municipal Code Chapter 13.79 Automatically Renewing Leases Ordinance.</string>
	<string name="harper_t">Option Agreement - 3135 Harper Street</string>
	<string name="harper_s">Adopt second reading of Ordinance No. 7,279–N.S. approving an Option Agreement between the City of Berkeley and Satellite AHA Development, Inc. (SAHAD) for the disposition and development of the City-owned property at 3135 Harper Street in Berkeley.</string>
	<string name="clerk_t">Appointment of City Clerk</string>
	<string name="clerk_s">Adopt a Resolution confirming the appointment of Mark Numainville as the City Clerk to be effective March 3, 2013.</string>
	<string name="feb_t">Formal Bid Solicitation and Request for Proposal Scheduled For Possible Issuance After Council Approval on February 5, 2013</string>
	<string name="feb_s">Approve the request for proposals or invitation for bids (attached to staff report) that will be, or are planned to be, issued upon final approval by the requesting department or division.  All contracts over the City Manager\'s threshold will be returned to Council for final approval.</string>
	<string name="harper_rev_t">Option Agreement - 3135 Harper Street (Revised)</string>
	<string name="harper_rev_s">Adopt first reading of an Ordinance approving an Option Agreement between the City of Berkeley and Satellite AHA Development, Inc. (SAHAD) for the disposition and development of the City-owned property at 3135 Harper Street in Berkeley.</string>
	<string name="acs_t">Contract: ACS State and Local Solutions for a Parking Citation Management Solution</string>
	<string name="acs_s">Adopt a Resolution authorizing the City Manager to execute a contract and any amendments with ACS State and Local Solutions to provide Parking Citation Management Services for a total amount not to exceed $1,440,000 from April 1, 2013 to June 30, 2016.</string>
	<string name="ajw_t">Contract: AJW Construction for FY 2013 Responsive Sidewalk Project Phase 1</string>
	<string name="ajw_s">Adopt a Resolution: 1. Approving specifications for the FY 2013 Responsive Sidewalk Project Phase 1, Specification No. 13-10702-C; 2. Accepting the bid of AJW Construction; and 3. Authorizing the City Manager to execute a contract and any amendments, extensions, or other change orders until completion of the project in accordance with the approved specifications, in an amount not to exceed $248,100, for the period of 120 calendar days from the date of the execution of the contract.</string>
	<string name="cleanup_t">Cleanup Amendment to Taxi Ordinance (BMC Chapter 9.52)</string>
	<string name="cleanup_s">Adopt first reading of an Ordinance amending Berkeley Municipal Code Section 9.52.050.B.1.f to correct an inadvertent omission.</string>
	<string name="enact_t">Enact Chapter 13.79, Automatically Renewing Leases</string>
	<string name="enact_s">Adopt first reading of an Ordinance enacting Berkeley Municipal Code Chapter 13.79 Automatically Renewing Leases Ordinance.</string>
	<string name="nextgen_t">Contract No. 8460A Amendment: NextGen Healthcare Information Systems Inc. for an Electronic Records System and Related Services</string>
	<string name="nextgen_s">Adopt a Resolution authorizing the City Manager to amend Contract No. 8460A with NextGen Healthcare Information Systems, Inc. increasing the amount by $105,897, for a total amount not to exceed $430,094, and extending the term to September 30, 2010 through June 30, 2016.</string>
	<string name="waste_t">Amending Waste Management Authority Joint Powers Agreement</string>
	<string name="waste_s">Adopt a Resolution approving an amendment to the Alameda County Waste Management Authority Joint Powers Agreement to clarify rules in case of member agency rule conflict.</string>
	<string name="fee_t">Fee Assessment - State of California Self-Insurance Fund (Workers\' Compensation Program)</string>
	<string name="fee_s">Ratifying the action taken by the City Manager during recess authorizing payment to the State of California Department of Industrial Relations for Fiscal Year 2013 for administering the Workers\' Compensation Program, in an amount not to exceed $158,194, which is $19,895 greater than the original preliminary fee authorized by Council on November 13, 2012.</string>
	<string name="line_t">Designate the Line of Succession for the Director of Emergency Services</string>
	<string name="line_s">Adopt a Resolution approving the designated line of succession to the position of Director of Emergency Services in the event of an officially declared disaster, and rescinding Resolution No. 65,510-N.S.</string>
	<string name="dana_t">Donation of Furniture for the Dona Spring Animal Shelter by Crate and Barrel</string>
	<string name="dana_s">Adopt a Resolution authorizing the City Manager to accept the donation of furniture for the Dona Spring Animal Shelter from Crate and Barrel.</string>
    <string name="Select_a_Representative">Select a Representative</string>
    <string name="photoDesc">Photo</string>
    <string name="See_Official_Webpage">See Official Webpage</string>
</resources>