<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	   	android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".BillInfoActivity" >

	<LinearLayout
	    android:id="@+id/bill_view" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
		<TextView
		    android:id="@+id/title"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="20sp" />
		
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    
		    <ProgressBar 
		        android:id="@+id/ratings"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="2" />
		    
		    <ImageButton
		        android:id="@+id/like"
		        android:layout_width="5dp"
		        android:layout_height="50dp"
		        android:layout_weight="1"
		        android:background="@drawable/thumbs_up_blk"
		        android:onClick="likeBill" />
		    
		    <ImageButton
		        android:id="@+id/dislike"
		        android:layout_width="5dp"
		        android:layout_height="50dp"
		        android:layout_weight="1"
		        android:onClick="dislikeBill"
		        android:background="@drawable/thumbs_down_blk" />
		    
		</LinearLayout>
		
		<TextView
		    android:id="@+id/bill_summary"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="16sp" />
		
		<Button 
		    android:id="@+id/get_more_info"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="getInfo"
		    android:text="@string/get_information" />
		
		<Button 
		    android:id="@+id/contact_rep"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="contact"
		    android:text="@string/contact_rep" />
		
		<EditText 
		    android:id="@+id/comment"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/add_comment"
		    android:textSize="16sp" />
	
	</LinearLayout>
	
</ScrollView>