<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepresentativeActivity" >

    <TextView
        android:id="@+id/selectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:text="@string/Select_a_Representative"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/repSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/selectLabel"
        android:layout_toRightOf="@+id/selectLabel" />

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/selectLabel"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/repPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/name"
            android:contentDescription="@string/photoDesc" />

        <ProgressBar
            android:id="@+id/photoLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/photo"
            android:layout_alignLeft="@+id/photo"
            android:layout_alignRight="@+id/photo"
            android:layout_alignTop="@+id/photo"
            android:indeterminateOnly="true" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/photo"
            android:layout_toRightOf="@+id/photo"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/phoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photo"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneLabel"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/seeWebsiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailLabel"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/See_Official_Webpage"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

</RelativeLayout>